--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "date-fns": "^3.3.1",
     "recharts": "^2.12.0",
     "@supabase/supabase-js": "^2.39.7",
-    "@google/genai": "^0.1.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2"
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/node": "^20.11.24",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
